Fix spacing for headers and start techoptions param Signed off by : Adam Pilkington apilkington@uk.ibm.com

--- a/liberty-starter-application/src/main/webapp/css/appacc.css
+++ b/liberty-starter-application/src/main/webapp/css/appacc.css
@@ -13,7 +13,7 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
- 
+
  body {
     font-family: "HelvNeueRoman";
     margin: 0;
@@ -44,13 +44,18 @@
     color: #000000;
 }
 
+.panel-primary .panel-heading {
+  font-family: "HelvNeueLight";
+}
+
 .options {
     margin-left: 36px;
     margin-top: 18px;
 }
- 
+
 .icon {
-    font-size: 20em;
+    padding-right : 5px;
+    padding-left : 5px;
 }
 
 .btn {
